--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=9091
 
 #Databse
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=library
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=DAMO202
 spring.datasource.username=sa
 spring.datasource.password=1234
 spring.jpa.show-sql=true
